# eu-ai-legal-rag

./: .env.example  docker-compose.yml  requirements.txt
data/: sources.eu_ai_legal.yaml
eu-ai-legal-rag/: README.md  pyproject.toml
eu-ai-legal-rag/src/eu_legal_rag/: answering.py  discover.py  fetch.py  schemas.py
eu-ai-legal-rag/tests/: test_chunking.py
src/eu_legal_rag/: api.py  chunking.py  cli.py  embeddings.py  ingest.py  settings.py  sources.py  store.py
